<resources>
    <string name="app_name">先知先觉</string>
    <string name="action_settings">Settings</string>
    <string name="start_enter">快速进入</string>


    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">取消</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_register">创建新账号</string>
    <string name="register_hint"> 手机号</string>
    <string name="register_phone_but"> 获取验证码</string>
    <string name="register_phone_pwd"> 请输入密码</string>
    <string name="register_phone_sms"> 请输入验证码</string>
    <string name="register_next">下一步</string>

    <!-- Strings related to login -->
    <string name="user_name"> 手机号、邮箱、先知号</string>
    <string name="user_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">密码</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="tray__authority">im.imxianzhi.com.imxianzhi.tray</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
