<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.wuwo.im.activity.RegisterActivity">

    <include layout="@layout/top_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_register_phone_num"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_borderwhite"
                android:hint="@string/register_hint"
                android:inputType="textPhonetic"
                android:padding="4dp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/register_phone_sms"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bg_borderwhite"
                    android:hint="@string/register_phone_sms"
                    android:padding="4dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_phone_but"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="15dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/register_phone_but" />


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/register_phone_pwd"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_borderwhite"
                android:hint="@string/register_phone_pwd"
                android:padding="4dp" />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/register_next"
            style="?android:textAppearanceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/txtborder_login"
            android:text="@string/register_next"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>
