<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/whitesmoke"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp">
            <!-- 01579b   0f2056-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#2298ef"></RelativeLayout>

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="88dp"
                android:background="@drawable/circle_back">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_launcher" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/login_horizontal_margin"
            android:paddingRight="@dimen/login_horizontal_margin">


            <!-- <com.yh.materialdesign.edittext.MaterialEditText
                 android:id="@+id/imap_login_uername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dip"
                 android:ellipsize="end"
                 android:focusable="false"
                 android:hint="手机号"
                 android:textCursorDrawable="@drawable/text_cursor_cyan"
                 android:textSize="18sp"
                 app2:baseColor="#555555"
                 app:floatingLabel="highlight"
                 app:maxCharacters="20"
                 app:primaryColor="@android:color/holo_blue_light"
                 app:singleLineEllipsis="true"
                  />

             <com.yh.materialdesign.edittext.MaterialEditText
                 android:id="@+id/imap_login_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:focusable="false"
                 android:hint="密码"
                 android:inputType="textPassword"
                 android:textColor="@android:color/white"
                 android:textCursorDrawable="@drawable/text_cursor_cyan"
                 android:textSize="18sp"
                 app:floatingLabel="highlight"
                 app:maxCharacters="20"
                 app2:baseColor="#555555"
                 app:primaryColor="@android:color/holo_blue_light"
                 app:singleLineEllipsis="true"/>-->


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/imap_login_uername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="text|textPhonetic"
                    android:maxLines="1"
                    android:text="hhe"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/imap_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/login_save_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="false"
                        android:padding="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="记住密码"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/login_auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="false"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="没账号？"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/user_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="立即注册"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />
                </LinearLayout>

            </RelativeLayout>


            <Button
                android:id="@+id/imap_login_userlogin"
                style="?android:textAppearanceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/txtborder_login"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <!--  #1E88E5 -->

            <!--            <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="20dp"
                                android:gravity="center"
                                android:textSize="17dp"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/login_by_gesture"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="30dp"
                                android:text="其他方式登录 "
                                android:textColor="@android:color/white"
                                android:textSize="17sp"
                                android:visibility="gone" />
                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/layout_setting"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginBottom="20dp"
                            android:gravity="bottom|center_horizontal"
                            android:orientation="vertical"  >

                            <TextView
                                android:id="@+id/kankan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="随便看看"
                                android:textColor="@android:color/white"
                                android:textSize="18sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@+id/registter"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:text="注册账号"
                                    android:textColor="@android:color/white" />

                                <View
                                    android:layout_width="0.5dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:background="@android:color/white"
                                    android:gravity="center_vertical" />

                                <TextView
                                    android:id="@+id/forget_pasword"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:gravity="center_vertical"
                                    android:text="忘记密码?"
                                    android:textColor="@android:color/white" />
                            </LinearLayout>
                        </LinearLayout>-->
        </LinearLayout>
    </LinearLayout>

</ScrollView>